--- a/waveppt/eupi-ppt-loader/build.gradle
+++ b/waveppt/eupi-ppt-loader/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.wave_ppt"
+        applicationId "com.euphony.eupi_ppt_loader"
         minSdk 26
         targetSdk 30
         versionCode 1
