--- a/waveppt/eupi-ppt-loader/src/main/AndroidManifest.xml
+++ b/waveppt/eupi-ppt-loader/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.wave_ppt">
+    package="com.euphony.eupi_ppt_loader">
 
     <application
         android:allowBackup="true"
@@ -14,10 +14,10 @@
         android:theme="@style/Theme.Waveppt"
         tools:targetApi="31">
         <activity
-            android:name=".PPTActivity"
+            android:name="com.euphony.eupi_ppt_loader.PPTActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.euphony.eupi_ppt_loader.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Waveppt">
