[Chore] Move application dictories to root dictory

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "wave-ppt"
-include ':app'
+include ':eupi-ppt-loader'
 include ':eupi-ppt-controller'
