[Feature] Add common-lib to remove duplicate code
- Add common-lib
- Add euphony libaray in common-lib
- Add Record_audio permission in common-lib
- Add common-lib in eupi-ppt-controller and eupi-ppt-loader

--- a/eupi-ppt-loader/build.gradle
+++ b/eupi-ppt-loader/build.gradle
@@ -66,8 +66,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
-//compose icon
+    // compose icon
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
-
+    // common-lib
+    implementation project(":common-lib")
 }
