[Chore] change package name
- Change package name `com.euphony.eupi_ppt_loader` to
  `com.euphony.eupi_ppt_viewer`

--- a/eupi-ppt-viewer/build.gradle
+++ b/eupi-ppt-viewer/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.euphony.eupi_ppt_loader"
+        applicationId "com.euphony.eupi_ppt_viewer"
         minSdk 26
         targetSdk 30
         versionCode 1
