--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "wave-ppt"
-include ':eupi-ppt-loader'
+include ':eupi-ppt-viewer'
 include ':eupi-ppt-controller'
 include ':common-lib'
