[Feature] Remove common-lib
- remove common-lib
- add euphony library each module

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 *.iml
 .gradle
 /local.properties
+/.idea
 /.idea/caches
 /.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea/*.xml
 .DS_Store
 /build
 /captures
