--- a/eupi-ppt-viewer/src/main/AndroidManifest.xml
+++ b/eupi-ppt-viewer/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:theme="@style/Theme.Waveppt"
         tools:targetApi="31">
         <activity
+            android:name=".ViewerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_viewer"
+            android:theme="@style/Theme.Waveppt" />
+        <activity
             android:name=".PPTActivity"
             android:exported="false" />
         <activity
