--- a/eupi-ppt-controller/build.gradle
+++ b/eupi-ppt-controller/build.gradle
@@ -65,5 +65,5 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     // euphony
-    api 'co.euphony.lib:euphony:0.8.1.1'
+    implementation 'co.euphony.lib:euphony:0.8.1.1'
 }
