--- a/eupi-ppt-viewer/build.gradle
+++ b/eupi-ppt-viewer/build.gradle
@@ -74,6 +74,6 @@ dependencies {
     // compose icon
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     //Euphony
-    api 'co.euphony.lib:euphony:0.8.1.1'
+    implementation 'co.euphony.lib:euphony:0.8.1.1'
 
 }
