--- a/eupi-ppt-viewer/src/main/AndroidManifest.xml
+++ b/eupi-ppt-viewer/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.euphony.eupi_ppt_viewer">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Waveppt"
-        tools:targetApi="31">
+        android:requestLegacyExternalStorage="true"
+        tools:targetApi="29">
         <activity
             android:name=".ViewerActivity"
             android:exported="false"
