--- a/eupi-ppt-viewer/build.gradle
+++ b/eupi-ppt-viewer/build.gradle
@@ -73,7 +73,10 @@ dependencies {
 
     // compose icon
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
     //Euphony
     implementation 'co.euphony.lib:euphony:0.8.1.1'
 
+    // common-lib
+    implementation project(":common-lib")
 }
