--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ rootProject.name = "wave-ppt"
 include ':eupi-ppt-viewer'
 include ':eupi-ppt-controller'
 include ':euphony'
+include ':common-lib'
