[Refactor] Rename project

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "wave-ppt"
+rootProject.name = "wave-pdf"
 include ':eupi-pdf-viewer'
 include ':eupi-pdf-controller'
 include ':euphony'
