--- a/eupi-pdf-viewer/build.gradle
+++ b/eupi-pdf-viewer/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.5.0'
