--- a/eupi-pdf-viewer/src/main/AndroidManifest.xml
+++ b/eupi-pdf-viewer/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.euphony.eupi_ppt_viewer">
+    package="com.euphony.eupi_pdf_viewer">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
