--- a/eupi-pdf-controller/src/main/AndroidManifest.xml
+++ b/eupi-pdf-controller/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Waveppt">
+        android:theme="@style/Theme.Wavepdf">
         <activity
             android:name=".ControllerActivity"
             android:exported="false"
             android:label="@string/title_activity_controller"
-            android:theme="@style/Theme.Waveppt" />
+            android:theme="@style/Theme.Wavepdf" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Waveppt">
+            android:theme="@style/Theme.Wavepdf">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
